# opengl-example

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
shaders/triangle/: triangle.vs.glsl
src/: lib.rs  main.rs
src/support/: app.rs  shader.rs
