[package]
name = "app"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
name = "app_core"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = "0.33.0"
egui_glow = "0.33.0"
egui-winit = "0.33.0"
env_logger = "0.11.8"
gl = "0.14.0"
glow = "0.16.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
log = "0.4.28"
nalgebra-glm = { version = "0.20.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
raw-window-handle = "0.6.2"
winit = "0.30.12"
